<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

   <com.google.android.material.tabs.TabLayout
       android:id="@+id/tablayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/colorPrimary"
       app:tabTextColor="@android:color/white"
       >
      <com.google.android.material.tabs.TabItem
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/tasklist"
          android:text="@string/task_list"
         />

      <com.google.android.material.tabs.TabItem
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/newtask"
          android:text="@string/new_task"
          />

      <com.google.android.material.tabs.TabItem
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/calendar"
          android:text="@string/calender"
          />
      
   </com.google.android.material.tabs.TabLayout>

   <androidx.viewpager.widget.ViewPager
       android:id="@+id/viewpager"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
      ></androidx.viewpager.widget.ViewPager>


</LinearLayout>